<resources>
    <string name="app_name">Cocoa Search</string>
    <string name="description_search_results">Search results</string>
    <string name="retry">Retry</string>
    <string name="default_search_word">카카오</string>
    <string name="developer_name">안동원</string>

    <string name="share_message">클릭하여 확인해보세요! - %s</string>
    <string name="share">공유하기</string>
    <string name="website">웹사이트</string>
    <string name="search_recommendations">이미지 연관 검색어</string>
    <string name="see_detail">상세보기</string>

    <!--format-->
    <string name="format_hash_tag">#%s</string>

    <!--title-->
    <string name="title_search_option">search option</string>
    <string name="title_sort">정렬 기준</string>
    <string name="title_image_info">이미지 정보</string>
    <string name="title_image_date">등록시간 :</string>
    <string name="title_site_info">사이트 종류 :</string>
    <string name="title_image_height">이미지 높이 :</string>
    <string name="title_image_width">이미지 폭 :</string>

    <!--description-->
    <string name="description_filter_image">filter image</string>
    <string name="description_clear_filter">clear filter</string>
    <string name="description_detail_image">detail image</string>

    <!--dummy-->
    <string name="dummy_image_date">월, 12월 2015년 19시 12분 54초</string>
    <string name="dummy_site_info">Daum블로그</string>
    <string name="dummy_image_height">640</string>
    <string name="dummy_image_width">600</string>

    <!--spinner array-->
    <string-array name="sort_list">
        <item>정확도순</item>
        <item>최신순</item>
    </string-array>

    <string name="sort_accuracy">정확도순</string>
    <string name="sort_recency">최신순</string>
    <string name="no_info">정보 없음</string>

</resources>
